@@ -496,11 +496,9 @@ AC_CHECK_HEADERS([gmp.h], [], AC_MSG_ERROR([gmp.h (GMP) is required]), [])
 
 AC_CHECK_LIB([gmp], [__gmpz_init],
 	[LIBCOB_LIBS="$LIBCOB_LIBS -lgmp"],
-	AC_MSG_ERROR([GMP is required]), [])
+	AC_MSG_ERROR([GMP library is required]), [])
 
 # Check just major/minor levels between header and library
-MYOLDLIBS=$LIBS
-LIBS="$MYOLDLIBS -lgmp"
 # get GMP version from header
 AC_RUN_IFELSE([AC_LANG_SOURCE([[
 	#include <stdio.h>
@@ -517,9 +515,11 @@ AC_RUN_IFELSE([AC_LANG_SOURCE([[
 	[AC_MSG_ERROR([Unable to extract GMP version information from gmp.h])],
 	[])
 if test "x$COB_GMP_HEADER" = "x"; then
-	AC_MSG_ERROR([Unable to extract GMP version information])
+	AC_MSG_ERROR([Unable to extract GMP version information (header)])
 fi
 
+MYOLDLIBS=$LIBS
+LIBS="$MYOLDLIBS -lgmp"
 # get GMP version from lib
 AC_RUN_IFELSE([AC_LANG_SOURCE([[
 	#include <stdio.h>
@@ -536,7 +536,7 @@ AC_RUN_IFELSE([AC_LANG_SOURCE([[
 	[AC_MSG_ERROR([Unable to extract GMP version information from gmp_version])],
 	[])
 if test "x$COB_GMP_LIB" = "x"; then
-	AC_MSG_ERROR([Unable to extract GMP version information])
+	AC_MSG_ERROR([Unable to extract GMP version information (library)])
 fi
 
 AC_MSG_CHECKING([matching GMP version])
@@ -958,13 +958,16 @@ AC_RUN_IFELSE([AC_LANG_PROGRAM([[]], [[
 	[])
 
 
+COB_HAS_64_BIT_POINTER="no"
 AC_MSG_CHECKING([if pointer is longer than 32 bits])
 AC_RUN_IFELSE([AC_LANG_PROGRAM([[]], [[
 	if (sizeof (void *) > 4U)
 		return 0;
 	return 1;
 	]])],
-	[AC_DEFINE([COB_64_BIT_POINTER], [1]) AC_MSG_RESULT([yes])],
+	[COB_HAS_64_BIT_POINTER="yes"
+	 AC_DEFINE([COB_64_BIT_POINTER], [1])
+	 AC_MSG_RESULT([yes])],
 	[AC_MSG_RESULT([no])],
 	[])
 
@@ -1315,6 +1318,7 @@ AC_SUBST([COB_KEYWORD_INLINE])
 AC_SUBST([COB_HAS_ISAM])
 AC_SUBST([COB_HAS_CURSES])
 AC_SUBST([COB_HAS_UTC_OFFSET])
+AC_SUBST([COB_HAS_64_BIT_POINTER])
 AC_SUBST([COB_PATCH_LEVEL], [$with_patch_level]) # needed for bin/cob-config
 
 AC_CONFIG_FILES([bin/cob-config Makefile libcob/Makefile lib/Makefile
