@@ -1,7 +1,7 @@
 #
 # atlocal gnucobol/tests
 #
-# Copyright (C) 2003-2012, 2014-2016 Free Software Foundation, Inc.
+# Copyright (C) 2003-2012, 2014-2017 Free Software Foundation, Inc.
 # Written by Keisuke Nishida, Roger While, Simon Sobisch
 #
 # This file is part of GnuCOBOL.
@@ -24,6 +24,7 @@ COB_BIGENDIAN="@COB_BIGENDIAN@"
 COB_HAS_ISAM="@COB_HAS_ISAM@"
 COB_HAS_CURSES="@COB_HAS_CURSES@"
 COB_HAS_UTC_OFFSET="@COB_HAS_UTC_OFFSET@"
+COB_HAS_64_BIT_POINTER="@COB_HAS_64_BIT_POINTER@"
 COBC="${abs_top_builddir}/cobc/cobc"
 COBCRUN="${abs_top_builddir}/bin/cobcrun"
 
@@ -74,6 +75,7 @@ if test "$MSYSTEM" = "MINGW32"; then
 fi
 export COB_HAS_CURSES
 export COB_HAS_UTC_OFFSET
+export COB_HAS_64_BIT_POINTER
 export LC_ALL=C
 export PATHSEP
 
