@@ -4,6 +4,8 @@
 	* general: removed all Makefiles and configure script generated by
 	  autoconf and automake from version control - use build_aux/bootstrap
 	* Makefile.am: ensure correct time stamps for make dist
+	* configure.ac: adjusted GMP version checks,
+	  substitute COB_HAS_64_BIT_POINTER for use in testsuite
 
 2017-08-08  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
